Building general and NAVBAR styles

--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
   <title>Academix || Hub</title>
   
   <link rel="stylesheet" href="./CSS/styles.css">
+  <link rel="stylesheet" href="./CSS/all.min.css">
+  <script src="./js/all.min.js"></script>
+
+  <!-- Google fonts Montserrat -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
 <body>
      <nav>
@@ -17,8 +24,12 @@
                     <li><a href="courses.html">Courses</a></li>
                     <li><a href="contact.html">Contact</a></li>
                </ul>
-               
+          <button id="open-menu-btn"><i class="fa fa-bars"></i></button>   
+          <button id="open-menu-btn"><i class="fa fa-close"></i></button>   
           </div>
      </nav>
+     <!-- ................................End of NAVBAR.............................................. -->
+
+     
 </body>
 </html>
