--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
   rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"
 />
+
+<style>
+  body{
+     background-image: url(./images/bg-texture.png);
+  }
+</style>
 </head>
 <body>
      <nav>
